✨ Feat: 앨범 컨트롤러 테스트 코드 완성